@@ -1,3 +1,11 @@
+2009-10-07  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR ld/10744
+	* ld-scripts/phdrs3.exp: Run phdrs3a.
+
+	* ld-scripts/phdrs3a.d: New.
+	* ld-scripts/phdrs3a.t: Likewise.
+
 2009-10-08  Alan Modra  <amodra@bigpond.net.au>
 
 	PR ld/10744
